phalcom-ast/tests/snapshots/integration__parser__assignment.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"x = 1\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        Expr {
            expr: Assignment(
                AssignmentExpr {
                    name: Var {
                        value: "x",
                        range: CopyRange {
                            start: 0,
                            end: 1,
                        },
                    },
                    value: Int {
                        digits: "1",
                        radix: 10,
                        range: CopyRange {
                            start: 4,
                            end: 5,
                        },
                    },
                    range: CopyRange {
                        start: 0,
                        end: 5,
                    },
                },
            ),
            range: CopyRange {
                start: 0,
                end: 5,
            },
        },
    ],
}
