phalcom-ast/tests/snapshots/integration__parser__bare_attribute_with_no_args_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"class Point {\\n  @pure\\n  x() {\\n    return 1\\n  }\\n}\\n\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        Class(
            ClassDef {
                name: "Point",
                superclass: None,
                members: [
                    Method(
                        MethodDef {
                            name: "x",
                            params: [],
                            body: [
                                Return(
                                    ReturnStatement {
                                        value: Some(
                                            Int {
                                                digits: "1",
                                                radix: 10,
                                                range: CopyRange {
                                                    start: 41,
                                                    end: 42,
                                                },
                                            },
                                        ),
                                        range: CopyRange {
                                            start: 34,
                                            end: 42,
                                        },
                                    },
                                ),
                            ],
                            is_static: false,
                            is_constructor: false,
                            attributes: [
                                Attribute {
                                    kind: User(
                                        "pure",
                                    ),
                                    name: "pure",
                                    args: [],
                                    range: CopyRange {
                                        start: 16,
                                        end: 21,
                                    },
                                },
                            ],
                            range: CopyRange {
                                start: 24,
                                end: 46,
                            },
                            name_range: CopyRange {
                                start: 24,
                                end: 25,
                            },
                        },
                    ),
                ],
                attributes: [],
                invariants: [],
                range: CopyRange {
                    start: 0,
                    end: 48,
                },
                name_range: CopyRange {
                    start: 6,
                    end: 11,
                },
            },
        ),
    ],
}
