phalcom-ast/tests/snapshots/integration__parser__break_statement_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"for (x in xs) { break }\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        For(
            ForStatement {
                binding: "x",
                binding_range: CopyRange {
                    start: 5,
                    end: 6,
                },
                iter: Var {
                    value: "xs",
                    range: CopyRange {
                        start: 10,
                        end: 12,
                    },
                },
                body: [
                    Break {
                        range: CopyRange {
                            start: 16,
                            end: 21,
                        },
                    },
                ],
                range: CopyRange {
                    start: 0,
                    end: 23,
                },
            },
        ),
    ],
}
