phalcom-ast/tests/snapshots/integration__parser__class_declaration_current_limitation.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"class Point {}\")"
---
Err: SyntaxError { kind: UnrecognizedEof { expected: ["newline"] }, range: 14..14 }
