phalcom-ast/tests/snapshots/integration__parser__class_declaration_with_trailing_newline_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"class Point {}\\n\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        Class(
            ClassDef {
                name: "Point",
                generic_parameters: [],
                superclass: None,
                where_clause: None,
                members: [],
                attributes: [],
                invariants: [],
                range: CopyRange {
                    start: 0,
                    end: 14,
                },
                name_range: CopyRange {
                    start: 6,
                    end: 11,
                },
            },
        ),
    ],
}
