phalcom-ast/tests/snapshots/integration__parser__continue_statement_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"for (x in xs) { continue }\")"
---
Program {
    statements: [
        For(
            ForStatement {
                binding: "x",
                iter: Var {
                    value: "xs",
                    range: CopyRange {
                        start: 10,
                        end: 12,
                    },
                },
                body: [
                    Continue {
                        range: CopyRange {
                            start: 16,
                            end: 24,
                        },
                    },
                ],
                range: CopyRange {
                    start: 0,
                    end: 26,
                },
            },
        ),
    ],
}
