phalcom-ast/tests/snapshots/integration__parser__empty_input_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [],
}
