phalcom-ast/tests/snapshots/integration__parser__ensures_attribute_on_getter.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"class Point {\\n  @ensures(__result >= 0)\\n  magnitude() {\\n    return 1\\n  }\\n}\\n\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        Class(
            ClassDef {
                name: "Point",
                superclass: None,
                members: [
                    Method(
                        MethodDef {
                            name: "magnitude",
                            params: [],
                            return_annotation: None,
                            body: [
                                Return(
                                    ReturnStatement {
                                        value: Some(
                                            Int {
                                                digits: "1",
                                                radix: 10,
                                                range: CopyRange {
                                                    start: 67,
                                                    end: 68,
                                                },
                                            },
                                        ),
                                        range: CopyRange {
                                            start: 60,
                                            end: 68,
                                        },
                                    },
                                ),
                            ],
                            is_static: false,
                            is_constructor: false,
                            attributes: [
                                Attribute {
                                    kind: Builtin(
                                        Ensures,
                                    ),
                                    name: "ensures",
                                    args: [
                                        Binary(
                                            BinaryExpr {
                                                op: GreaterThanOrEqual,
                                                op_range: Some(
                                                    CopyRange {
                                                        start: 34,
                                                        end: 36,
                                                    },
                                                ),
                                                left: Field {
                                                    value: "__result",
                                                    kind: Implementation,
                                                    range: CopyRange {
                                                        start: 25,
                                                        end: 33,
                                                    },
                                                },
                                                right: Int {
                                                    digits: "0",
                                                    radix: 10,
                                                    range: CopyRange {
                                                        start: 37,
                                                        end: 38,
                                                    },
                                                },
                                                range: CopyRange {
                                                    start: 25,
                                                    end: 38,
                                                },
                                            },
                                        ),
                                    ],
                                    range: CopyRange {
                                        start: 16,
                                        end: 39,
                                    },
                                },
                            ],
                            range: CopyRange {
                                start: 42,
                                end: 72,
                            },
                            name_range: CopyRange {
                                start: 42,
                                end: 51,
                            },
                        },
                    ),
                ],
                attributes: [],
                invariants: [],
                range: CopyRange {
                    start: 0,
                    end: 74,
                },
                name_range: CopyRange {
                    start: 6,
                    end: 11,
                },
            },
        ),
    ],
}
