phalcom-ast/tests/snapshots/integration__parser__error_display_is_not_a_panic.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse_display(\"let = \")"
---
Expected one of identifier, "(", "[", "_" (at bytes 4..5)
