phalcom-ast/tests/snapshots/integration__parser__error_unexpected_token.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"let = )\")"
---
Err: SyntaxError { kind: UnrecognizedToken { token: "=", expected: ["identifier", "\"(\"", "\"[\"", "\"_\""] }, range: 4..5 }
