phalcom-ast/tests/snapshots/integration__parser__for_loop_binding_and_iter_expression.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"for (item in makeList(3)) { total = total + item }\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        For(
            ForStatement {
                binding: "item",
                binding_range: CopyRange {
                    start: 5,
                    end: 9,
                },
                iter: UnqualifiedCall(
                    UnqualifiedCallExpr {
                        name: "makeList",
                        name_range: Some(
                            CopyRange {
                                start: 13,
                                end: 21,
                            },
                        ),
                        args: [
                            Positional {
                                expr: Int {
                                    digits: "3",
                                    radix: 10,
                                    range: CopyRange {
                                        start: 22,
                                        end: 23,
                                    },
                                },
                                range: CopyRange {
                                    start: 22,
                                    end: 23,
                                },
                            },
                        ],
                        range: CopyRange {
                            start: 13,
                            end: 24,
                        },
                    },
                ),
                body: [
                    Expr {
                        expr: Assignment(
                            AssignmentExpr {
                                name: Var {
                                    value: "total",
                                    range: CopyRange {
                                        start: 28,
                                        end: 33,
                                    },
                                },
                                value: Binary(
                                    BinaryExpr {
                                        op: Add,
                                        op_range: Some(
                                            CopyRange {
                                                start: 42,
                                                end: 43,
                                            },
                                        ),
                                        left: Var {
                                            value: "total",
                                            range: CopyRange {
                                                start: 36,
                                                end: 41,
                                            },
                                        },
                                        right: Var {
                                            value: "item",
                                            range: CopyRange {
                                                start: 44,
                                                end: 48,
                                            },
                                        },
                                        range: CopyRange {
                                            start: 36,
                                            end: 48,
                                        },
                                    },
                                ),
                                range: CopyRange {
                                    start: 28,
                                    end: 48,
                                },
                            },
                        ),
                        range: CopyRange {
                            start: 28,
                            end: 48,
                        },
                    },
                ],
                range: CopyRange {
                    start: 0,
                    end: 50,
                },
            },
        ),
    ],
}
